Fixed: Issue with read more link not showing on a responsive level

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -95,7 +95,7 @@ body {
     background-color: #E4E0CF !important;
     border-radius: 15px;
     border: 3px solid #30362F;
-    margin: auto 3px;
+    margin: 5px;
 }
 
 .img-container img {
